@@ -10,7 +10,7 @@
 <td align="right">
 	<small><a href="http://wiki.wesnoth.org/">Wiki</a> |</small>
 	<small><a href="http://forum.wesnoth.org/">Forum</a> |</small>
-	<small><a href="http://savannah.nongnu.org/projects/wesnoth/">Savannah</a></small>
+	<small><a href="http://gna.org/projects/wesnoth/">Gna!</a></small>
 </td>
 </tr>
 </table>
