@@ -26,6 +26,7 @@ Version 1.0+svn:
  * units and balancing changes:
    * removed Thug from Knalgan faction
    * Northerners can now recruit Rocklobber in Age of Heroes era
+ * documentation switch doxygen templates from CVS to SVN and from Savannah to Gna!
  * random map generator now uses island_size (#4458)
 
 Version 1.0:
